decision: many-many (non-reflexive case) only sankey, reflexive case only chord